# DosuBot_pkg

./: LICENSE  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/skeleton/: JointMsg.h
devel/include/xm_arm_msgs/: xm_ArmGripperCommand.h  xm_ArmGripperCommandAction.h  xm_ArmGripperCommandActionFeedback.h  xm_ArmGripperCommandActionGoal.h  xm_ArmGripperCommandActionResult.h  xm_ArmGripperCommandFeedback.h  xm_ArmGripperCommandGoal.h  xm_ArmGripperCommandResult.h  xm_ArmSerialData.h  xm_ArmSerialDatagram.h
devel/lib/dosubot_hardware/: dosubot_hardware
devel/lib/dosubot_robot_hardware/: dosubot_robot_hardware
devel/lib/dosubot_serial/: dosubot_serial  dosubot_serial_listener
devel/lib/pkgconfig/: dosubot_control.pc  dosubot_description.pc  dosubot_hardware.pc  dosubot_moveit_config.pc  dosubot_robot_hardware.pc  dosubot_serial.pc  minimum_ros_control.pc  moveit_trobo.pc  moveit_trobo_commander.pc  my_robot.pc  skeleton.pc  skeleton_send_node.pc  trobo_control.pc  trobo_description.pc  xm_arm_hardware_serial_node.pc  xm_arm_moveit_config.pc  xm_arm_msgs.pc  xm_arm_robot_hardware.pc
devel/lib/skeleton/: skeleton
devel/lib/skeleton_send_node/: skeleton_send_node
devel/lib/trobo_control/: trobo_control
devel/lib/xm_arm_hardware_serial_node/: xm_arm_hardware_serial_node
devel/lib/xm_arm_robot_hardware/: xm_arm_robot_hardware
devel/share/dosubot_control/cmake/: dosubot_controlConfig.cmake
devel/share/dosubot_description/cmake/: dosubot_descriptionConfig.cmake
devel/share/dosubot_hardware/cmake/: dosubot_hardwareConfig.cmake
devel/share/dosubot_moveit_config/cmake/: dosubot_moveit_configConfig.cmake
devel/share/dosubot_msgs/cmake/: dosubot_msgs-msg-paths.cmake
devel/share/dosubot_msgs/msg/: xm_ArmGripperCommandActionFeedback.msg  xm_ArmGripperCommandActionResult.msg  xm_ArmGripperCommandFeedback.msg  xm_ArmGripperCommandGoal.msg
devel/share/dosubot_robot_hardware/cmake/: dosubot_robot_hardwareConfig.cmake
devel/share/dosubot_serial/cmake/: dosubot_serialConfig.cmake
devel/share/minimum_ros_control/cmake/: minimum_ros_controlConfig.cmake
devel/share/moveit_trobo/cmake/: moveit_troboConfig.cmake
src/dosubot_bringup/: CMakeLists.txt  package.xml
src/dosubot_bringup/launch/: dosubot_bringup_moveit_and_hardware.launch  skeleton_tracking.launch
src/dosubot_control/: CMakeLists.txt
src/dosubot_control/config/: dosubot_control.yaml  trajectory_control.yaml
src/dosubot_control/launch/: dosubot_bringup.launch  dosubot_control.launch  dosubot_gazebo_bringup.launch  dosubot_trajectory_controller.launch
src/dosubot_description/: CMakeLists.txt  package.xml
src/dosubot_description/launch/: display.launch  gazebo.launch
src/dosubot_description/urdf/: dosubot.gazebo  dosubot.urdf
src/dosubot_hardware/: CMakeLists.txt  package.xml
src/dosubot_hardware/include/dosubot_hardware/: dosubot_hw.h
src/dosubot_hardware/launch/: .trobo_control.launch.swo  dosubot_hardware.launch
src/dosubot_hardware/src/: dosubot_hw.cpp  main.cpp
src/dosubot_hardware_controller_config/: CMakeLists.txt  package.xml
src/dosubot_hardware_controller_config/launch/: dosubot_hardware_joint_states.launch  dosubot_hardware_joint_trajectory.launch
src/dosubot_moveit_config/: .setup_assistant  CMakeLists.txt
src/dosubot_moveit_config/config/: controllers.yaml  dosubot.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
src/dosubot_moveit_config/launch/: default_warehouse_db.launch  demo.launch  dosubot_moveit_controller_manager.launch.xml  dosubot_moveit_planning_exectution.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/dosubot_serial/: CMakeLists.txt
src/dosubot_serial/src/: dosubot_serial (copy).cpp  dosubot_serial.cpp  dosubot_serial_listener.cpp  listener.cpp
src/minimum_ros_control_moveit-master/: README.md
src/minimum_ros_control_moveit-master/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
src/minimum_ros_control_moveit-master/src/trobo_control/: CMakeLists.txt
src/minimum_ros_control_moveit-master/src/trobo_control/include/trobo_control/: trobo_hw.h
src/minimum_ros_control_moveit-master/src/trobo_control/launch/: trobo_control.launch  trobo_control.launch.org
src/minimum_ros_control_moveit-master/src/trobo_control/src/: trobo_control.cpp  trobo_hw.cpp
src/minimum_ros_control_moveit-master/src/trobo_description/: package.xml  rviz.rviz
src/minimum_ros_control_moveit-master/src/trobo_description/launch/: display.launch
src/minimum_ros_control_moveit-master/src/trobo_description/urdf/: trobo.urdf  trobo.xacro
src/my_robot/: CMakeLists.txt  package.xml
src/my_robot/config/: joint_names_my_robot.yaml
src/my_robot/launch/: display.launch  gazebo.launch
src/my_robot/meshes/: BASE_LINK.STL  LINK1.STL  LINK2.STL  LINK3.STL  LINK4.STL  LINK5.STL
src/my_robot/urdf/: my_robot.urdf
src/skeleton/: CMakeLists.txt
src/skeleton/msg/: JointMsg.msg
src/skeleton/src/: skeleton.cpp
src/skeleton_send_node/: CMakeLists.txt  package.xml
src/skeleton_send_node/src/: skeleton_send_node.cpp
src/xm_arm_bringup/launch/: xm_arm_bringup_moveit_and_hardware.launch
src/xm_arm_hardware_controller_config/config/: xm_arm_hardware_joint_names.yaml  xm_arm_hardware_joint_states.yaml  xm_arm_hardware_joint_trajectory.yaml
src/xm_arm_hardware_controller_config/launch/: xm_arm_hardware_joint_states.launch  xm_arm_hardware_joint_trajectory.launch
src/xm_arm_hardware_serial_node/: CMakeLists.txt
src/xm_arm_hardware_serial_node/src/: xm_arm_hardware_serial_node.cpp  xm_arm_hardware_serial_port.cpp
src/xm_arm_msgs/: CMakeLists.txt
src/xm_arm_robot_hardware/: CMakeLists.txt  package.xml
src/xm_arm_robot_hardware/launch/: xm_arm_robot_hardware.launch
src/xm_arm_robot_hardware/src/: xm_arm_robot_hardware.cpp
(+120 files in other folders)
