<package>
  <name>dosubot_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for dosubot_description</p>
    <p>This package contains configuration data, 3D models and launch files
for dosubot_description robot</p>
  </description>
  <author>brucechen</author>
  <maintainer email="cbbsjtu@126.com" />
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  
  </export>
</package>
