<?xml version="1.0"?>
<package>
  <name>dosubot_hardware</name>
  <version>0.0.0</version>
  <description>The dosubot_hardware package</description>

  <maintainer email="cbbsjtu@126.com">Bruce Chen</maintainer>

  <license>BSD</license>

  <author email="cbbsjtu@126.com">Bruce Chen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>xm_arm_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>xm_arm_msgs</run_depend>

  <export>
  </export>

</package>
