<?xml version="1.0"?>
<package>
  <name>skeleton_send_node</name>
  <version>0.0.0</version>
  <description>The skeleton msg send node package</description>

  <maintainer email="cbbsjtu@126.com">Bruce Chen</maintainer>

  <license>BSD</license>

  <author email="cbbsjtu@126.com">Bruce Chen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>skeleton</build_depend>
  <build_depend>xm_arm_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>skeleton</run_depend>
  <run_depend>xm_arm_msgs</run_depend>

  <export>
  </export>

</package>
