<?xml version="1.0"?>
<package>
  <name>trobo_description</name>
  <version>0.0.0</version>
  <description>The trobo_description package</description>

  <maintainer email="yoneken@ieee.org">Kenta Yonekura</maintainer>

  <license>BSD</license>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
